# spotifyAI

./: .gitignore  Dockerfile  README.md  auth_flask.py  cleanPlaylist.py  credentials_cache.json  debug_auth.py  docker-compose.yml  pull_playlists.py  pyproject.toml  spotifyOAuth.py  test_1project.py  test_flask.py  test_spotify.py
src/spotifyai/: app.py  pull_playlist.py
src/spotifyai/templates/: index.html
