[tool.poetry]
name = "spotifyai"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "spotifyai", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.1.0"
spotipy = "^2.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
